added README and updated the spacing in the rest of the docs

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "protractor": "^2.1.0"
   },
   "dependencies": {
-    "http-server": "^0.8.0"
+    "http-server": "^0.8.0",
+    "webdriver-manager": "^7.0.1"
   }
 }
